@@ -1,9 +1,9 @@
 //
-// "$Id: glut.h,v 1.4.4.2 2002/01/01 15:11:28 easysw Exp $"
+// "$Id: glut.h,v 1.4.4.3 2003/08/02 21:17:30 easysw Exp $"
 //
 // GLUT compatibility header for the Fast Light Tool Kit (FLTK).
 //
-// Copyright 1998-2002 by Bill Spitzak and others.
+// Copyright 1998-2003 by Bill Spitzak and others.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Library General Public
@@ -26,5 +26,5 @@
 #include <FL/glut.H>
 
 //
-// End of "$Id: glut.h,v 1.4.4.2 2002/01/01 15:11:28 easysw Exp $".
+// End of "$Id: glut.h,v 1.4.4.3 2003/08/02 21:17:30 easysw Exp $".
 //
