@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Group_Type.cxx,v 1.4.2.7.2.2 2002/01/01 15:11:29 easysw Exp $"
+// "$Id: Fl_Group_Type.cxx,v 1.4.2.7.2.3 2003/08/02 21:17:30 easysw Exp $"
 //
 // Fl_Group object code for the Fast Light Tool Kit (FLTK).
 //
@@ -7,7 +7,7 @@
 // the Fl_Tabs widget, with special stuff to select tab items and
 // insure that only one is visible.
 //
-// Copyright 1998-2002 by Bill Spitzak and others.
+// Copyright 1998-2003 by Bill Spitzak and others.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Library General Public
@@ -242,5 +242,5 @@ const char tile_type_name[] = "Fl_Tile";
 Fl_Tile_Type Fl_Tile_type;	// the "factory"
 
 //
-// End of "$Id: Fl_Group_Type.cxx,v 1.4.2.7.2.2 2002/01/01 15:11:29 easysw Exp $".
+// End of "$Id: Fl_Group_Type.cxx,v 1.4.2.7.2.3 2003/08/02 21:17:30 easysw Exp $".
 //
