@@ -1,9 +1,9 @@
 //
-// "$Id: Shortcut_Button.h,v 1.3.2.3.2.2 2002/08/09 22:57:00 easysw Exp $"
+// "$Id: Shortcut_Button.h,v 1.3.2.3.2.3 2003/08/02 21:17:30 easysw Exp $"
 //
 // Shortcut header file for the Fast Light Tool Kit (FLTK).
 //
-// Copyright 1998-2002 by Bill Spitzak and others.
+// Copyright 1998-2003 by Bill Spitzak and others.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Library General Public
@@ -35,5 +35,5 @@ public:
 };
 
 //
-// End of "$Id: Shortcut_Button.h,v 1.3.2.3.2.2 2002/08/09 22:57:00 easysw Exp $".
+// End of "$Id: Shortcut_Button.h,v 1.3.2.3.2.3 2003/08/02 21:17:30 easysw Exp $".
 //
